Fixed spacing on projects page

--- a/src/app/(pages)/_components/Projects/Projects.module.scss
+++ b/src/app/(pages)/_components/Projects/Projects.module.scss
@@ -1,5 +1,5 @@
 .container {
-  padding: 2rem;
+  padding: 10% 5%;
   width: 100%;
   height: 90%;
 }
@@ -7,7 +7,7 @@
 .heading {
   font-size: 2.5rem;
   font-weight: bold;
-  margin-bottom: 1rem;
+  margin-bottom: 2%;
   color: white;
 }
 
